# AVXLib

./: BookChapterVerseMap.cpp  BookChapterVerseMap.h  CLexIndex.cpp  CLexIndex.h  CMakeLists.txt  CMakeSettings.json  Feature.h  FeatureMatch.h  FeatureSpec.h  SearchClause.h  SearchFragment.h  SearchRequest.h  TokenFeature.h  TokenMatch.h  TokenVector.h  XBitArray.cpp  XBitArray.h  avx.cpp  avx.h  fivebitencoding.cpp  fivebitencoding.h  parsable.cpp  parsable.h  slicable.cpp  slicable.h
